Fix <pre> width on smalls screens

--- a/assets/css/layout/_layout.css
+++ b/assets/css/layout/_layout.css
@@ -175,6 +175,7 @@
 
 .main-content {
   grid-area: main-content;
+  min-width: 0;
 }
 
 .page-sidebar {
